[package]
name = "natural-cron"
version = "0.1.0"
edition = "2024"
authors = ["Satyajit Nayak"]
description = "An easy-to-use rust library for creating and validating cron expressions with natural, human-readable APIs."
license = "MIT"
repository = "https://github.com/satyajitnayk/natural-cron-rs"
homepage = "https://github.com/satyajitnayk/natural-cron-rs"
documentation = "https://docs.rs/natural-cron"
readme = "README.md"
keywords = ["cron", "scheduler", "time", "builder", "jobs"]
categories = ["date-and-time", "parsing"]

[dependencies]
regex = "1.11.1"
